force-app/main/default/objects/Thread__c/fields/RelatedObjectURL__c.field-meta.xml
<CustomField>
    <fullName>RelatedObjectURL__c</fullName>
    <description>Link to the related object record</description>
    <formula>HYPERLINK( &quot;/&quot; &amp; CRM_Related_Object__c, &quot;Åpne meldingen&quot;, &quot;_blank&quot;)</formula>
    <label>Related Object URL</label>
    <type>Text</type>
</CustomField>