force-app/main/default/objects/Thread__c/fields/TAG_Contract_NAV_Unit__c.field-meta.xml
<CustomField>
    <fullName>TAG_Contract_NAV_Unit__c</fullName>
    <description>Copies NAV unit from related contract to be used in sharing rules</description>
    <label>Contract NAV Unit</label>
    <length>40</length>
    <type>Text</type>
</CustomField>