force-app/main/default/objects/Thread__c/fields/TAG_External_Message_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>TAG_External_Message_Start_Date__c</fullName>
    <label>TAG External Message Start Date</label>
    <summarizedField>Message__c.CRM_Sent_Datetime_Formula__c</summarizedField>
    <summaryFilterItems>
        <field>Message__c.CRM_External_Message__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Message__c.CRM_Thread__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>