force-app/main/default/objects/Thread__c/fields/TAG_Force_Update__c.field-meta.xml
<CustomField>
    <fullName>TAG_Force_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To create a change on record to initiate flows</description>
    <label>Force Update</label>
    <type>Checkbox</type>
</CustomField>