force-app/main/default/objects/Thread__c/fields/TAG_LastCachedTermsTime__c.field-meta.xml
<CustomField>
    <fullName>TAG_LastCachedTermsTime__c</fullName>
    <label>TAG_LastCachedTermsTime</label>
    <type>DateTime</type>
</CustomField>