force-app/main/default/objects/Thread__c/fields/TAG_LastCachedTermsUser__c.field-meta.xml
<CustomField>
    <fullName>TAG_LastCachedTermsUser__c</fullName>
    <label>TAG_LastCachedTermsUser</label>
    <length>20</length>
    <type>Text</type>
</CustomField>