force-app/main/default/objects/Thread__c/fields/TAG_Number_of_unread_messages_fro__c.field-meta.xml
<CustomField>
    <fullName>TAG_Number_of_unread_messages_fro__c</fullName>
    <label>Number of unread messages from employer</label>
    <summaryFilterItems>
        <field>Message__c.CRM_Read_By_Nav__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Message__c.CRM_Type__c</field>
        <operation>equals</operation>
        <value>Message</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Message__c.CRM_External_Message__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Message__c.CRM_Thread__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>