force-app/main/default/objects/Thread__c/fields/TAG_Related_Account__c.field-meta.xml
<CustomField>
    <fullName>TAG_Related_Account__c</fullName>
    <formula>CRM_Account__r.INT_OrganizationNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Account</label>
    <type>Text</type>
</CustomField>