force-app/main/default/objects/Thread__c/fields/TAG_RelatedObjectExternalId__c.field-meta.xml
<CustomField>
    <fullName>TAG_RelatedObjectExternalId__c</fullName>
    <description>The external id for the related object record.</description>
    <label>TAG_RelatedObjectExternalId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>