force-app/main/default/objects/Thread__c/fields/TAG_Sent_to_Redaction_Count__c.field-meta.xml
<CustomField>
    <fullName>TAG_Sent_to_Redaction_Count__c</fullName>
    <label>TAG Sent to Redaction Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>