force-app/main/default/objects/Thread__c/fields/TAG_Started_by_External__c.field-meta.xml
<CustomField>
    <fullName>TAG_Started_by_External__c</fullName>
    <formula>TAG_External_Message_Start_Date__c &lt;  TAG_Internal_Message_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAG Started by External</label>
    <type>Checkbox</type>
</CustomField>