force-app/main/default/objects/Thread__c/listViews/MyThreads.listView-meta.xml
<ListView>
    <fullName>MyThreads</fullName>
    <columns>RelatedObjectURL__c</columns>
    <columns>AAREG_Thread_Subject__c</columns>
    <columns>CRM_Number_of_unread_Messages_by_NAV__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Threads</label>
</ListView>